--- a/app/src/main/res/layout/fragment_room_list.xml
+++ b/app/src/main/res/layout/fragment_room_list.xml
@@ -10,4 +10,5 @@
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context="antonio.chatup.RoomFragment"
-    tools:listitem="@layout/fragment_room" />
+    tools:listitem="@layout/fragment_room"
+    android:clickable="false" />
