--- a/app/src/main/res/layout/fragment_chat_list.xml
+++ b/app/src/main/res/layout/fragment_chat_list.xml
@@ -3,12 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
-    android:name="antonio.chatup.RoomFragment"
+    android:name="antonio.chatup.ChatFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".screens.RoomFragment"
-    tools:listitem="@layout/fragment_room"
-    android:clickable="false" />
+    tools:context=".screens.ChatFragment"
+    tools:listitem="@layout/fragment_chat" />
