--- a/app/src/main/res/layout/fragment_room_list.xml
+++ b/app/src/main/res/layout/fragment_room_list.xml
@@ -9,6 +9,6 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".screens.RoomFragment"
+    tools:context=".screens.Room.RoomFragment"
     tools:listitem="@layout/fragment_room"
     android:clickable="false" />
