--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,6 +12,7 @@
     android:background="@android:color/holo_blue_dark">
 
     <!-- Login progress -->
+
     <ProgressBar
         android:id="@+id/login_progress"
         style="?android:attr/progressBarStyleLarge"
@@ -31,6 +32,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:weightSum="1">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="6.78"
+                android:src="@mipmap/ic_chat" />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -81,4 +90,5 @@
 
         </LinearLayout>
     </ScrollView>
+
 </LinearLayout>
